Fix line breaks in info table cells
Accidentally inserted character broke CSS rule.

--- a/entry_types/scrolled/package/src/frontend/EditableTable.module.css
+++ b/entry_types/scrolled/package/src/frontend/EditableTable.module.css
@@ -1,4 +1,4 @@
-x.table {
+.table {
   white-space: pre-line;
 }
 
